Update AutoConnectClient.java